@@ -1,1 +1,12 @@
 学习笔记
+
+代码作业: Week_02/src/main/java/com/jye/week2/HttpClientUtil.java
+
+## 关于GC的总结:
+
+### GC 的模式
+SerialGC: -XX:+UseSerialGC
+ParallelGC: -XX:+UseParallelGC
+CMSGC: -XX:+UseConcMarkSweepGC
+G1GC: -XX:+UseG1GC
+
